# LD42

./: .clang-format  .gitignore  CMakeLists.txt  NOTES.md  README.md
data/scripts/system/: loader.lua
data/shaders/GL4/: basic.frag  basic.vert  msdf.frag
data/shaders/GLES2/: basic.frag  basic.vert  msdf.frag
emberjs_shim_src/: config.cpp  websocket.cpp
ext/ginseng/include/ginseng/: ginseng.hpp
ext/ginseng/src/: test_primary.cpp  test_query.cpp  test_stress.cpp  test_tags.cpp
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/lodepng/: CMakeLists.txt
ext/lua/: CMakeLists.txt
ext/metastuff/: .gitignore  CMakeLists.txt  README.md
ext/metastuff/example/: JsonCast.inl  main.cpp
ext/metastuff/include/: Meta.h  Meta.inl
ext/msdfgen/: CMakeLists.txt
ext/msdfgen/core/: SignedDistance.h
ext/sol2/: CMakeLists.txt
ext/soloud/: AUTHORS  CMakeLists.txt
ext/soloud/src/audiosource/wav/: stb_vorbis.c
ext/soloud/src/backend/openal/: soloud_openal.cpp  soloud_openal_dll.c
ext/soloud/src/core/: soloud.cpp
ext/sushi/: .gitignore  .gitmodules  CMakeLists.txt
ext/sushi/assets/: frag.glsl  vert.glsl
ext/sushi/src/sushi/: common.hpp  framebuffer.cpp  framebuffer.hpp  framebuffer_cubemap.cpp  framebuffer_cubemap.hpp  frustum.cpp  frustum.hpp  gl.hpp  gles_shim.hpp  iqm.cpp  iqm.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  sushi.hpp  texture.cpp  texture.hpp
src/: array2d.hpp  component_scripting.hpp  components.cpp  components.hpp  engine.cpp  engine.hpp  entities.cpp  entities.hpp  font.cpp  font.hpp  gameplay_state.cpp  gameplay_state.hpp  glm_json.hpp  glm_lua.hpp  gui.cpp  gui.hpp  main.cpp  resource_cache.hpp  resources.cpp  resources.hpp  scripting.cpp  scripting.hpp  sdl.hpp  sprite.hpp  sushi_renderer.cpp  sushi_renderer.hpp  systems.cpp  systems.hpp  tetromino.hpp  utility.hpp
src/emberjs/: config.cpp  config.hpp  config.js  websocket.cpp  websocket.hpp  websocket.js
src/platform/: platform.hpp
src/platform/native/: platform.cpp
src/platform/webgl/: platform.cpp
static/: index.html
static/scripts/: config.js
